--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "types": "dist/index.d.ts",
   "scripts": {
     "prepare": "tsup",
-    "a2a:cli": "npx tsx src/a2a/cli.ts",
+    "a2a:cli": "npx tsx --inspect=9230 src/a2a/cli.ts",
     "dev": "yarn build; node --inspect index.local.js",
     "build": "tsup",
     "test": "jest"
@@ -51,8 +51,5 @@
     "tsup": "^8.4.0",
     "typescript": "^5.8.3"
   },
-  "packageManager": "yarn@4.8.1",
-  "resolutions": {
-    "@agentic-profile/express-common": "portal:/Users/mike/projects/iamagentic/agentic-profile-express-common"
-  }
+  "packageManager": "yarn@4.8.1"
 }
