Added licensing notices

--- a/example.env
+++ b/example.env
@@ -1,6 +1,11 @@
+# This enables access to endpoints like http://localhost:3003/storage?auth=yoursecret
 # ADMIN_TOKEN=yoursecret
 
 # AP_DID_PATH=web:agents.example.com
 # AP_AI_PROVIDER=vertex:
 
 # PORT=3003
+
+# Coder agent requires a Gemini API key
+# Create a new key at https://ai.google.dev/gemini-api/docs/api-key
+GEMINI_API_KEY=<your_api_key>
